# ht-fastapi-react-poetry-tut-ver26-1

./: HowTo-Python Fastapi React Poetry Internet Links.txt
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: TaskForm.tsx  TaskList.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts  index2.ts
