[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "hato70",email = "yaladres@web.de"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
